--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "build": "webpack --config webpack.config.js --mode development",
-    "dev": "webpack serve --config webpack.config.js --mode development --open"
+    "build": "webpack --config webpack.config.production.js",
+    "build:dev": "webpack --config webpack.config.development.js",
+    "dev": "webpack serve --config webpack.config.development.js --open"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "dev-server": "^0.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "date-fns": "^3.0.6"
